--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,6 @@
   <string name="new_items_available">New items available</string>
   <string name="view">View</string>
   <string name="no_tag">No tag</string>
-  <string name="night_mode">Night mode</string>
   <string name="notify_for_new_items">Notify for new items</string>
   <string name="toggle_read_status">Toggle read status</string>
   <string name="open_link_in_browser">Open link in browser</string>
@@ -83,5 +82,10 @@
   <string name="open_link_in_web_view">Open link in Web view</string>
   <string name="max_feed_items">Maximum number of items per feed</string>
   <string name="could_not_load_url">Could not load URL</string>
+
+  <string name="theme_automatic">Automatic</string>
+  <string name="theme_day">Day</string>
+  <string name="theme_night">Night</string>
+  <string name="theme">Theme</string>
 
 </resources>
