--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
   <string name="image_loading">Image loading</string>
   <string name="no_activity_for_link">Couldn\'t find an activity to open that link with</string>
   <string name="check_for_updates">Check for updates</string>
+  <string name="on_startup">On startup</string>
   <string name="include_mobile_hotspots">Include mobile hotspots</string>
   <string name="updated_feeds">Updated feeds</string>
   <string name="selected">Selected</string>
