--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,5 +90,7 @@
   <string name="theme_day">Day</string>
   <string name="theme_night">Night</string>
   <string name="theme">Theme</string>
+  <string name="send_bug_report">Send bug report</string>
+  <string name="no_email_client">Could not open email client</string>
 
 </resources>
