--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -88,5 +88,7 @@
   <string name="theme_day">日间</string>
   <string name="theme_night">夜间</string>
   <string name="theme">主题</string>
+  <string name="send_bug_report">发送错误报告</string>
+  <string name="no_email_client">无法打开电子邮件客户端</string>
 
 </resources>
