Fixed crash when loading bad iframes
Also adds better handling of youtube thumbnails, in case they can't be
loaded.

Fixes #163

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,5 +92,6 @@
   <string name="theme">Theme</string>
   <string name="send_bug_report">Send bug report</string>
   <string name="no_email_client">Could not open email client</string>
+  <string name="touch_to_play_video">Touch to play video</string>
 
 </resources>
