Added context menu to feed items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,6 @@
   <string name="no_email_client">Could not open email client</string>
   <string name="touch_to_play_video">Touch to play video</string>
   <string name="javascript">Javascript</string>
+  <string name="open_feed">Open feed</string>
 
 </resources>
