Added "Mark items below as read" to context menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,6 @@
   <string name="touch_to_play_video">Touch to play video</string>
   <string name="javascript">Javascript</string>
   <string name="open_feed">Open feed</string>
+  <string name="mark_items_below_as_read">Mark items below as read</string>
 
 </resources>
