Added option for hiding thumbnails

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
 
   <string name="synchronization">Synchronization</string>
   <string name="only_on_wifi">Only on WiFi</string>
+  <string name="show_thumbnails">Show thumbnails</string>
   <string name="may_result_data_charges">May result in mobile data charges.</string>
   <string name="only_when_charging">Only when charging</string>
   <string name="image_loading">Image loading</string>
