--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -89,6 +89,8 @@
   <string name="theme_day">Día</string>
   <string name="theme_night">Noche</string>
   <string name="theme">Tema</string>
+  <string name="sort_newest_first">El más nuevo primero</string>
+  <string name="sort_oldest_first">El más antiguo primero</string>
   <string name="send_bug_report">Enviar informe de error</string>
   <string name="no_email_client">No se puede abrir un cliente de correo</string>
   <string name="touch_to_play_video">Tocar para reproducir vídeo</string>
