--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,5 +107,6 @@
   <string name="battery_optimization">Battery optimization</string>
   <string name="battery_optimization_disabled">Battery optimization disabled</string>
   <string name="battery_optimization_enabled">Battery optimization enabled</string>
+  <string name="preload_custom_tab">Preload custom tab</string>
 
 </resources>
